fixed mobile header margin and heading to not overflow header container.

--- a/lesson2/css/multipleObjects.css
+++ b/lesson2/css/multipleObjects.css
@@ -174,6 +174,10 @@ header {
 }
 
 @media screen and (max-width: 800px) {
+    .headitem{
+        margin: 0;
+        padding: .5em .5em;
+    }
     .maincont{
         height: 100dvh;
         display: grid;
